modified priority queue with map of priorities

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,3 +8,6 @@ target_link_libraries(test_avltree Catch2::Catch2)
 
 add_executable(test_sort test_sort.cpp ../src/sort.cpp)
 target_link_libraries(test_sort Catch2::Catch2)
+
+add_executable(test_priority_queue_modified test_priority_queue_modified.cpp ../src/priority_queue_modified.cpp)
+target_link_libraries(test_priority_queue_modified Catch2::Catch2)
