--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,13 +1,26 @@
 include_directories(../src/)
 
-add_executable(test_bstree test_bstree.cpp ../src/bstree.cpp)
+add_executable(test_bstree
+        test_bstree.cpp
+        ../src/bstree.cpp)
 target_link_libraries(test_bstree Catch2::Catch2)
 
-add_executable(test_avltree test_avltree.cpp ../src/avltree.cpp)
+add_executable(test_avltree
+        test_avltree.cpp
+        ../src/avltree.cpp)
 target_link_libraries(test_avltree Catch2::Catch2)
 
-add_executable(test_sort test_sort.cpp ../src/sort.cpp)
+add_executable(test_sort
+        test_sort.cpp
+        ../src/sort.cpp)
 target_link_libraries(test_sort Catch2::Catch2)
 
-add_executable(test_priority_queue_modified test_priority_queue_modified.cpp ../src/priority_queue_modified.cpp)
+add_executable(test_priority_queue_modified
+        test_priority_queue_modified.cpp
+        ../src/priority_queue_modified.cpp)
 target_link_libraries(test_priority_queue_modified Catch2::Catch2)
+
+add_executable(test_bucketsort
+        test_bucket_sort.cpp
+        ../src/bucket_sort.cpp)
+target_link_libraries(test_bucketsort Catch2::Catch2)
