--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,12 +15,28 @@ add_executable(test_sort
         ../src/sort.cpp)
 target_link_libraries(test_sort Catch2::Catch2)
 
-add_executable(test_priority_queue_modified
-        test_priority_queue_modified.cpp
-        ../src/priority_queue_modified.cpp)
-target_link_libraries(test_priority_queue_modified Catch2::Catch2)
-
 add_executable(test_bucketsort
         test_bucket_sort.cpp
         ../src/bucket_sort.cpp)
 target_link_libraries(test_bucketsort Catch2::Catch2)
+
+
+# ----------- Priority queue ----------------------
+add_executable(test_priority_queue
+        test_priority_queue.cpp
+        ${CMAKE_SOURCE_DIR}/src/priority_queue/priority_queue.cpp
+)
+target_include_directories(test_priority_queue PRIVATE ${CMAKE_SOURCE_DIR}/src/priority_queue/)
+target_compile_definitions(test_priority_queue PRIVATE TEST)
+
+
+# ----------- Dijkstra  ----------------------
+add_executable(test_dijkstra
+        test_dijkstra.cpp
+        ${CMAKE_SOURCE_DIR}/src/dijkstra/graph.cpp
+)
+target_include_directories(test_dijkstra PRIVATE ${CMAKE_SOURCE_DIR}/src/dijkstra/)
+target_compile_definitions(test_dijkstra PRIVATE TEST)
+
+
+# -------- TODO: добавить A* и Greedy first search ------
